--- a/src/components/Search/style.css
+++ b/src/components/Search/style.css
@@ -1,6 +1,20 @@
-.search-block {
+.search__block {
+    display: flex;
     background-color: #fff;
     color:  black;
-    border-radius: 4px;
-    padding: 20px;
+    border-radius: 20px;
+    justify-content: space-between;
+    padding: 8px;
+}
+
+.search__block input {
+    width: 90%;
+    border: none;
+}
+
+.search__block button {
+    border: none;
+    background: transparent;
+    font-size: 1.2rem;
+    cursor: pointer;
 }
