--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -12,10 +12,11 @@
 }
 
 .modal {
+    position: relative;
     max-width: calc(100%-40px);
     max-height: calc(100%-40px);
     width: 400px;
-    background-color: darkslateblue;
+    background-color: #fff;
     padding: 20px;
     border-radius: 4px;
     box-sizing: border-box;
@@ -23,11 +24,19 @@
 
 .modal h3 {
     margin-bottom: 20px;
+    text-align: center;
 }
 
 form {
     display: grid;
     gap: 20px;
+}
+
+input {
+    background: #f7f7f7;
+    border: 1px solid #ebebeb;
+    border-radius: 8px;
+    font-size: 15px;
 }
 
 .modal-ctl {
@@ -40,7 +49,10 @@ form {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid;
+    background: #f7f7f7;
+    box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
+    border-radius: 4px;
+    border: 1px solid #ebebeb;
     cursor: pointer;
 }
 
@@ -51,4 +63,22 @@ form {
 label {
     display: grid;
     gap: 6px;
+}
+
+.btn_close {
+    background: #f7f7f7;
+    position: static;
+    top: 3px;
+    right: 3px;
+    border-radius: 4px;
+    border: 1px solid #ebebeb;
+    font-size: 1.2rem;
+    box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
+}
+
+.modal-btn {
+    background: #f7f7f7;
+    box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
+    border-radius: 4px;
+    border: 1px solid #ebebeb;
 }
