--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -20,6 +20,7 @@
     padding: 20px;
     border-radius: 4px;
     box-sizing: border-box;
+    box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
 }
 
 .modal h3 {
@@ -32,11 +33,12 @@ form {
     gap: 20px;
 }
 
-input {
+form input {
     background: #f7f7f7;
     border: 1px solid #ebebeb;
     border-radius: 8px;
     font-size: 15px;
+    height: 20px;
 }
 
 .modal-ctl {
@@ -67,7 +69,7 @@ label {
 
 .btn_close {
     background: #f7f7f7;
-    position: static;
+    position: absolute;
     top: 3px;
     right: 3px;
     border-radius: 4px;
