--- a/src/components/Promo/style.css
+++ b/src/components/Promo/style.css
@@ -1,37 +1,8 @@
-.promo {
-    padding: 20px;
-    border: 1px solid;
-    border-radius: 4px;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-auto-rows: 40px;
-    align-items: center;
-    grid-column-end: span 2;
+.promo__img{
+  width: 80%;
+  border-radius: 15px;
+  box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
+  display: flex;
+  margin: 0 auto;
   }
   
-  .promo h3{
-    grid-row-start: 1;
-    font-size: 10px;
-    text-transform: capitalize;
-  }
-  
-  .promo-pic{
-    width: 100%;
-    height: 100%;
-    grid-column-start: 2;
-    background-image: url("../../assets/imagas/promo1.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: right center;
-  }
-
-  .promo.big{
-    grid-column: 1 / span 4;
-  }
-  
-  .promo.small{
-    grid-column-end: span 1;
-  }
-  .pic2{
-    background-image: url("../../assets/imagas/promo2.webp");
-  }
