--- a/src/components/Search/style.css
+++ b/src/components/Search/style.css
@@ -9,7 +9,13 @@
 
 .search__block input {
     width: 90%;
-    border: none;
+    border: 0px none;
+    padding: 5px;
+    font-size: 1.1rem;
+}
+
+.search__block input:focus {
+    border: 0px none;
 }
 
 .search__block button {
