--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ a {
 
 #root {
   max-width: 1350px;
-  margin: 0 auto;
   min-height: 100vh;
   display: grid;
   grid-auto-rows: auto 1fr auto;
@@ -26,17 +25,21 @@ a {
 
 main {
   padding: 30px 10%;
-  display: grid;
+  display: flex;
   align-content: flex-start;
   gap: 20px;
   justify-content: center;
+}
+
+.main__wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  align-items: center;
 }
 
 .container .search-block {
@@ -53,20 +56,47 @@ main {
 
 .promo_big {
   margin-top: -15%;
-  border-radius: 10px;
+  margin-bottom: 20px;
 }
 
 .promo__container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
-  align-items: center;
+}
+
+.promo_none {
+  display: none;
 }
 
 .maxwidth {
-  max-width: 1040px;
+  max-width: 1280px;
 }
 
 .carousel {
   padding: 0 40px;
+}
+
+@media (max-width: 1024px) {
+  .main__wrapper {
+    width: 90%;
+  }
+
+  main {
+    margin: 0 auto;
+    padding: 10px 0;
+  }
+
+  .maxwidth {
+    max-width: 700px;
+  }
+
+  .promo__container {
+    display: none;
+  }
+
+  .promo_none {
+    display: block;
+    margin-top: 0;
+  }
 }
