--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -16,22 +16,6 @@
     max-width: 270px;
 }
 
-.card__btn {
-    border: none;
-    outline: none;
-    height: 30px;
-    background-color: #ffe44d;
-    color: black;
-    border-radius: 26px;
-    cursor: pointer;
-    display: inline-block;
-    box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
-}
-
-.card__btn:hover {
-    background-color: #777;
-}
-
 .card__discount {
     position: absolute;
     top: 10px;
@@ -43,7 +27,7 @@
     align-items: center;
 }
 
-.card__lake {
+.card__like {
     color: crimson;
     position: absolute;
     top: 10px;
