--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
 
 h1,
 h2,
-h3 {
+h3, h4, p {
   margin: 0;
 }
 
@@ -21,7 +21,6 @@ a {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  align-items: center;
   justify-content: space-between;
   /* display: grid;
   grid-template-rows: auto 1fr auto; */
@@ -39,12 +38,17 @@ main {
   display: flex;
   flex-direction: column;
   width: 70%;
+  justify-content: center;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
 .container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
+  margin-top: 30px;
+  align-self: center;
 }
 
 .container .search-block {
@@ -60,7 +64,7 @@ main {
 }
 
 .promo_big {
-  margin-top: -15%;
+  margin-top: -10%;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -84,8 +88,116 @@ main {
   max-width: 1280px;
 }
 
+.font__bold {
+  font-weight: 600;
+}
+
+.font__gray{
+  font-size: 1.5rem;
+  color: darkgray;
+}
+
 .carousel {
   padding: 0 40px;
+}
+
+.wrapper__product {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 90%;
+  margin: 0 auto;
+  padding: 30px;
+  gap: 10px;
+}
+
+.product__block_team-gray{
+  background-color: #f6f7f9;
+  border-radius: 6px;
+  max-width: 320px;
+}
+
+
+.product__block {
+  display: flex;
+  gap: 20px;
+  padding: 10px;
+}
+
+.product__block_left {
+  width: 70%;
+}
+
+.product__block_rigth {
+  /* width: 50%; */
+  display: flex;
+  flex-direction: column;
+  gap: 10px
+}
+
+.product__img {
+  height: 400px;
+}
+
+.product__price {
+  display: flex;
+  flex-direction: column;
+}
+
+.product__price span {
+  color: crimson;
+  font-size: 1.5rem;
+}
+
+.product__add {
+  display: flex;
+  gap: 10px;
+  border: solid 0.5px darkgray;
+  border-radius: 26px;
+  cursor: pointer;
+  color: black;
+  height: 26px;
+  font-size: 1.25rem;
+  align-items: center;
+  padding: 5px;
+}
+
+.product__btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: darkgray;
+  font-size: 1.25rem;
+  vertical-align: middle;
+}
+
+.btn__gray {
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+  color: darkgray;
+  align-self: flex-start;
+  display: flex;
+  align-items: center;
+  padding: 0;
+}
+
+
+.pay__btn {
+  border: none;
+  outline: none;
+  height: 36px;
+  background-color: #ffe44d;
+  color: black;
+  border-radius: 26px;
+  cursor: pointer;
+  display: inline-block;
+  padding: 5px 36px;
+  box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
+}
+
+.pay__btn:hover {
+  background-color: #777;
 }
 
 @media (max-width: 1024px) {
