--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -11,6 +11,10 @@
     align-items: center;
 }
 
+.card:hover {
+    box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
+}
+
 .card__img {
     height: 150px;
     max-width: 270px;
