--- a/src/components/Search/style.css
+++ b/src/components/Search/style.css
@@ -5,6 +5,7 @@
     border-radius: 20px;
     justify-content: space-between;
     padding: 8px;
+    align-items: center;
 }
 
 .search__block input {
