--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ main {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  margin-top: 30px;
+  margin: 30px 0;
   align-self: center;
 }
 
