--- a/src/components/General/style.css
+++ b/src/components/General/style.css
@@ -15,7 +15,7 @@
     background-color: #ffe44d;
     display: flex;
     justify-content: center;
-    box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
+    /* box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2); */
 }
 
 header {
@@ -25,7 +25,6 @@ header {
     color: black;
     justify-content: space-between;
     padding: 10px 50px;
-    padding-bottom: 150px;
     position: relative;
 }
 
@@ -36,22 +35,32 @@ header {
     margin-bottom: 15px;
 }
 
-.header__nav_scrolled {
+/* .wrapper__box_scrolled {
     position: sticky;
     top: 0;
     left: 0;
     right: 0;
-}
+    z-index: 10;
+} */
 
 .header__search {
     flex-basis: 60%
 }
 
+.wrapper__ban {
+    width: 100%;
+    background-color: #ffe44d;
+    display: flex;
+    justify-content: flex-start;
+    box-shadow: 0px 6px 4px -4px rgba(34, 60, 80, 0.2);
+}
+
 .header__ban {
     width: 30%;
     max-width: 350px;
-    margin-left: 10%;
-    margin-bottom: 20px;
+    margin: 20px 15%;
+    padding-bottom: 120px;
+    background-color: #ffe44d;
 }
 
 .header__catalog {
@@ -125,11 +134,6 @@ footer {
     gap: 10px;
 }
 
-/* .footer__contacts p,
-.footer__contacts h4 {
-    margin: 0;
-} */
-
 .footer__menu {
     display: none;
 }
@@ -138,14 +142,13 @@ footer {
     header {
         width: 100%;
         padding: 10px 10px;
-        padding-bottom: 130px;
     }
 
     .header__ban {
         width: 90%;
         max-width: 350px;
-        margin-left: 10%;
-        margin-bottom: 20px;
+        margin: 20px 10%;
+        padding-bottom: 100px;
         font-size: 0.8rem;
     }
 
