--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,9 @@ body {
 
 h1,
 h2,
-h3, h4, p {
+h3,
+h4,
+p {
   margin: 0;
 }
 
@@ -58,6 +60,10 @@ main {
   grid-column-end: span 4;
 }
 
+.container__pagination {
+  grid-column-end: span 4;
+}
+
 .transition {
   transition: ease-out 0.2s;
 }
@@ -95,7 +101,7 @@ main {
   font-weight: 600;
 }
 
-.font__gray{
+.font__gray {
   font-size: 1.5rem;
   color: darkgray;
 }
@@ -114,7 +120,6 @@ main {
   align-items: center;
   padding: 0;
 }
-
 
 .pay__btn {
   border: none;
@@ -154,5 +159,17 @@ main {
   .promo_none {
     display: block;
     margin-top: 0;
+  }
+
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .container__pagination {
+    grid-column-end: span 3;
+  }
+
+  .pay__btn_mobile {
+    width: 20%;
   }
 }
