--- a/src/blocks/product.css
+++ b/src/blocks/product.css
@@ -150,6 +150,50 @@ hr {
     color: #f6f7f9;
 }
 
+.modal__reviews {
+    position: fixed;
+    background-color: #fff9;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    backdrop-filter: blur(1px) grayscale(50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.reviews {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    position: relative;
+    max-width: calc(100%-40px);
+    max-height: calc(100%-40px);
+    width: 400px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
+}
+
+.reviews__product {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.reviews__img {
+    height: 100px;
+}
+
+.reviews textarea {
+    height: 100px;
+    font-size: 1.1rem;
+    resize: none;
+}
+
 @media (max-width: 1040px) {
     .product__block {
         flex-direction: column;
