--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -10,6 +10,7 @@
     position: relative;
     align-items: center;
     justify-content: space-between;
+    border: none!important;
 }
 
 .card:hover {
