--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,11 @@ main {
   grid-column-end: span 4;
 }
 
+.container.bs {
+/* Стиль для бутстрапа */
+  display: block;
+}
+
 .container__pagination {
   grid-column-end: span 4;
 }
@@ -98,7 +103,7 @@ main {
 }
 
 .maxwidth_btn {
-  width: 20%;
+  width: 25%;
 }
 
 .font__bold {
