--- a/src/blocks/product.css
+++ b/src/blocks/product.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 90%;
+    width: 70%;
     margin: 0 auto;
     padding: 30px;
     gap: 10px;
@@ -19,7 +19,6 @@
     border-radius: 6px;
     max-width: 320px;
 }
-
 
 .product__block {
     display: flex;
@@ -39,10 +38,11 @@
 }
 
 .product__block_rigth {
-    /* width: 50%; */
+    padding: 10px;
     display: flex;
     flex-direction: column;
-    gap: 10px
+    gap: 10px;
+    border-radius: 8px;
 }
 
 .product__block .product__block_left p {
@@ -147,11 +147,6 @@
 
 .product__add-reviews:hover {
     background-color: #f6f7f9;
-}
-
-hr {
-    width: 100%;
-    color: #f6f7f9;
 }
 
 .modal__reviews {
