--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -11,7 +11,7 @@
     align-items: center;
 }
 
-.modal {
+.my-modal {
     position: relative;
     max-width: calc(100%-40px);
     max-height: calc(100%-40px);
@@ -23,7 +23,7 @@
     box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
 }
 
-.modal h3 {
+.my-modal h3 {
     margin-bottom: 20px;
     text-align: center;
 }
@@ -63,7 +63,7 @@ form {
 }
 
 label {
-    display: grid;
+    display: grid!important;
     gap: 6px;
 }
 
