--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('../src/blocks/product.css');
+@import url('../src/blocks/basket.css');
 
 body {
   background-color: #fff;
@@ -61,7 +62,7 @@ main {
 }
 
 .container.bs {
-/* Стиль для бутстрапа */
+  /* Стиль для бутстрапа */
   display: block;
 }
 
@@ -115,6 +116,11 @@ main {
   color: darkgray;
 }
 
+
+.shadow {
+  box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
+}
+
 .carousel {
   padding: 0 40px;
 }
@@ -145,6 +151,12 @@ main {
 
 .pay__btn:hover {
   background-color: #777;
+}
+
+hr {
+  width: 100%;
+  color: #d1d3d7;
+  margin: 0 !important;
 }
 
 @media (max-width: 1024px) {
