--- a/src/blocks/basket.css
+++ b/src/blocks/basket.css
@@ -1,7 +1,56 @@
-.busket__block {
+.basket__block {
     display: flex;
     gap: 20px;
     padding: 10px;
     align-items: center;
     justify-content: space-between;
+}
+
+.basket__block_left {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.basket__delete {
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+    color: darkgray;
+    display: flex;
+    align-items: center;
+    padding: 0;
+}
+
+.block__rigth {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 45%;
+    max-width: 360px;
+    min-width: 310px;
+}
+
+.block__rigth h5 {
+    font-size: 1rem;
+    font-weight: 600;
+}
+.basket__name{
+    width: 40%;
+}
+
+.basket__price {
+    display: flex;
+    flex-direction: column;
+    width: 15%;
+}
+
+.basket__price p {
+    font-size: 1.2rem;
+}
+
+.basket__price span {
+    color: crimson;
+    font-size: 1.2rem;
 }
