--- a/src/blocks/product.css
+++ b/src/blocks/product.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
     padding: 30px;
     gap: 10px;
@@ -17,7 +17,8 @@
 .product__block_team-gray {
     background-color: #f6f7f9;
     border-radius: 6px;
-    max-width: 320px;
+    font-size: 0.8rem;
+    max-width: 360px;
 }
 
 .product__block {
@@ -70,7 +71,11 @@
 
 .product__price span {
     color: crimson;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+}
+
+.product__price div {
+    font-size: 1.2rem;
 }
 
 .product__add {
