--- a/src/blocks/basket.css
+++ b/src/blocks/basket.css
@@ -6,6 +6,10 @@
     justify-content: space-between;
 }
 
+.product__block_rigth .basket__block span{
+    color: crimson;
+}
+
 .basket__block_left {
     width: 70%;
     display: flex;
