--- a/src/blocks/basket.css
+++ b/src/blocks/basket.css
@@ -58,3 +58,15 @@
     color: crimson;
     font-size: 1.2rem;
 }
+.basket__empty{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.basket__empty div {
+    font-size: 36px;
+    opacity: 0.6;
+}
