--- a/src/blocks/product.css
+++ b/src/blocks/product.css
@@ -18,6 +18,7 @@
     background-color: #f6f7f9;
     border-radius: 6px;
     font-size: 0.8rem;
+    justify-content: flex-start!important;
     max-width: 360px;
 }
 
@@ -25,6 +26,7 @@
     display: flex;
     gap: 20px;
     padding: 10px;
+    justify-content: space-between;
 }
 
 .product__block_left {
@@ -145,10 +147,11 @@
     border-radius: 26px;
     cursor: pointer;
     font-size: 1rem;
-    width: 20%;
+    width: 150px;
     height: 2rem;
     padding: 5px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .product__add-reviews:hover {
