--- a/src/blocks/product.css
+++ b/src/blocks/product.css
@@ -6,6 +6,7 @@
     margin: 0 auto;
     padding: 30px;
     gap: 10px;
+    position: relative;
 }
 
 .product {
@@ -199,6 +200,7 @@
     height: 100px;
     font-size: 1.1rem;
     resize: none;
+    padding: 10px;
 }
 
 @media (max-width: 1040px) {
