--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,10 @@ main {
   grid-column-end: span 4;
 }
 
+.container__title {
+  grid-column-end: span 4;
+}
+
 .container.bs {
   /* Стиль для бутстрапа */
   display: block;
@@ -151,7 +155,7 @@ main {
   box-shadow: 0px 1px 6px 1px rgba(34, 60, 80, 0.2);
 }
 
-.pay__btn_basket{
+.pay__btn_basket {
   width: 200px;
 }
 
@@ -168,6 +172,11 @@ hr {
   width: 100%;
   color: #d1d3d7;
   margin: 0 !important;
+}
+
+input,
+textarea {
+  outline: none;
 }
 
 @media (max-width: 1024px) {
@@ -197,7 +206,8 @@ hr {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .container__pagination {
+  .container__pagination,
+  .container__title {
     grid-column-end: span 3;
   }
 }
